<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <View
        android:layout_width="8dp"
        android:layout_height="8dp" />

    <View
        android:layout_width="78dp"
        android:layout_height="4dp"
        android:background="@color/gray_middle" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/products"
        android:src="@drawable/product_image_emp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_average" />

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/product_name"
        style="@style/title_small_caps_font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mens_product_emp" />

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            style="@style/label_large_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/gray_middle" />

        <View
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/product_category"
            style="@style/label_large_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_s_clothing" />

    </LinearLayout>

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            style="@style/label_large_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/gray_middle" />

        <View
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/price"
            android:src="@drawable/ic_star_fill"
            app:tint="@color/day_night_color" />

        <View
            android:layout_width="6dp"
            android:layout_height="6dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/price"
            android:src="@drawable/ic_star_fill"
            app:tint="@color/day_night_color" />

        <View
            android:layout_width="6dp"
            android:layout_height="6dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/price"
            android:src="@drawable/ic_star_half"
            app:tint="@color/day_night_color" />

        <View
            android:layout_width="6dp"
            android:layout_height="6dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/price"
            android:src="@drawable/ic_star_empty"
            app:tint="@color/day_night_color" />

        <View
            android:layout_width="6dp"
            android:layout_height="6dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/price"
            android:src="@drawable/ic_star_empty"
            app:tint="@color/day_night_color" />

    </LinearLayout>

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            style="@style/label_large_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/gray_middle" />

        <View
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/product_price"
            style="@style/display_small_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_emp" />

        <TextView
            style="@style/title_small_caps_font_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_value"
            android:textColor="@color/gray_middle" />

    </LinearLayout>

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <TextView
        style="@style/label_large_font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/gray_middle" />

    <View
        android:layout_width="6dp"
        android:layout_height="6dp" />

    <TextView
        android:id="@+id/product_description"
        style="@style/body_large_caps_font_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_emp" />

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/buy_now_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/add_to_cart" />

    <View
        android:layout_width="16dp"
        android:layout_height="16dp" />

</LinearLayout>