<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.dev.fakestoredeveemtest.presentation.view.AspectRatioImageView
            android:id="@+id/product_image_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/product_image_emp" />

        <View
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_name_rv"
                style="@style/body_large_caps_font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="100dp"
                android:maxLines="2"
                android:text="@string/product_name_emp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/product_price_rv"
                style="@style/body_large_caps_font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_emp" />

            <TextView
                style="@style/body_large_caps_font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price_value"
                android:textColor="@color/gray_middle" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>